# WalkMod

Firmware/AngleMod/AngleMod.X/: .gitignore
Firmware/AngleMod/AngleMod.X/nbproject/: configurations.xml  project.xml
Firmware/AngleMod/AngleMod.X/src/: adc.c  btn.c  cli.c  cmd_seq.c  config.c  dac.c  gpio.c  joy.c  main.c  math.c  param.c  rb.c  seq.c  uart.c
Firmware/AngleMod/TiltMod.X/: .gitignore
Firmware/AngleMod/TiltMod.X/nbproject/: configurations.xml  project.xml
Firmware/AngleMod/cli-sim/: CMakeLists.txt
Firmware/AngleMod/cli-sim/src/: main.cpp
Firmware/AngleMod/include/anglemod/: btn.h  cli.h  cmd_seq.h  gpio.h  joy.h  osc.h  rb.h  uart.h
Firmware/AngleMod/pic16f152-stubs/: CMakeLists.txt
Firmware/AngleMod/pic16f152-stubs/include/: xc.h
Firmware/AngleMod/pic16f152-stubs/src/: pic16f152.cpp
Firmware/AngleMod/src/: cli.c  cmd_seq.c  dac.c  main.c  osc.c  uart.c
Firmware/AngleMod/unit-tests/: CMakeLists.txt
Hardware/: WalkMod.DsnWrk
Hardware/AngleMod V1/: AngleMod V1.OutJob  AngleMod V1.PCBDwf  AngleMod V1.PcbDoc  AngleMod V1.PrjPcb  AngleMod V1.PrjPcbStructure  AngleMod V1.SchDoc
Hardware/Fabrication/AngleMod V1/: Status Report.Txt
Hardware/Fabrication/AngleMod V1/BOM/: Bill of Materials-AngleMod V1.xlsx
Hardware/Fabrication/AngleMod V1/Gerber/: AngleMod V1.EXTREP  AngleMod V1.GBL  AngleMod V1.GBP  AngleMod V1.GBS  AngleMod V1.GD1  AngleMod V1.GG1  AngleMod V1.GKO  AngleMod V1.GM1  AngleMod V1.GM4  AngleMod V1.GM5  AngleMod V1.GPB  AngleMod V1.GPT  AngleMod V1.GTL  (+6 more)
Hardware/Fabrication/Rev B0/: Status Report.Txt
Hardware/Fabrication/Rev C0/: Status Report.Txt
Hardware/Libs/: BC846A-BC849C.SchLib  BC857A-BC857C.SchLib  BC8xx.PcbLib  Bourns-3214-Series.PcbLib  Bourns-3214-Series.SchLib  Bourns-3269-Series.PcbLib  Bourns-3269-Series.SchLib  CUI-DS04-254-SMT-Series.PcbLib  CUI-DS04-254-SMT-Series.SchLib  CUI-DS05-127-SMT-Series.PcbLib  CUI-DS05-127-SMT-Series.SchLib  IC-Standard.PcbLib  LM139-LM239-LM339.SchLib  LTC2066-LTC2067-LTC2068.SchLib  MCP48FVFxx.SchLib  NX3L4053.SchLib  Nichicon-RSL-Series.PcbLib  Nichicon-RSL-Series.SchLib  Nichicon-UCL-Series.PcbLib  Nichicon-UCL-Series.SchLib  PIC16(L)F1764+5+8+9.SchLib  PIC16F15225+45.SchLib  Pads.PcbLib  Pads.SchLib  Samtec-TSW-Series.PcbLib  Samtec-TSW-Series.SchLib  TLV900x.SchLib  TSV63x-TSV63xA.SchLib  WalkMod.LibPkg  YAGEO-AT-Series.PcbLib  YAGEO-AT-Series.SchLib  YAGEO-RC-Series.SchLib  YAGEO-RT-Series.PcbLib  YAGEO-RT-Series.SchLib  YAGEO-Resistors.PcbLib  kyocera-C-X7R-Series.PcbLib
Hardware/WalkMod/: WalkMod.BomDoc  WalkMod.OutJob  WalkMod.PCBDwf  WalkMod.PcbDoc  WalkMod.PrjPcb  WalkMod.PrjPcbStructure  WalkMod.PrjPcbVariants  WalkMod.SchDoc
Hardware/WalkMod A0/: WalkMod A0.PcbDoc  WalkMod A0.PrjPcb  WalkMod A0.PrjPcbStructure  WalkMod A0.SchDoc
Hardware/WalkMod B0/: WalkMod B0.OutJob  WalkMod B0.PCBDwf  WalkMod B0.PcbDoc  WalkMod B0.PrjPcb  WalkMod B0.PrjPcbStructure  WalkMod B0.PrjPcbVariants  WalkMod B0.SchDoc
Hardware/WalkMod C0/: WalkMod C0.BomDoc  WalkMod C0.PCBDwf  WalkMod C0.PcbDoc  WalkMod C0.PrjPcb  WalkMod C0.PrjPcbStructure  WalkMod C0.SchDoc
Simulations/: WalkMod.asc  WalkMod2.asc
(+93 files in other folders)
